# langchain_practice

./: Langchain Project.docx  main.py  pyproject.toml
generativeai/: 1-langchainintro.ipynb  tools.ipynb
